# brahmagupta

./: .gitignore  LICENSE  README.md  analyze_shuffle.py  pyproject.toml  requirements.txt  scan.py
.github/workflows/: ci.yml
tests/: conftest.py  test_analyze_shuffle.py  test_scan.py
